crates/wac-parser/tests/resolution/fail/invalid-world-interface-import.wac
type x = u32;

world w {
    import x;
}